info popup z-index fix

--- a/styles/info-modal.css
+++ b/styles/info-modal.css
@@ -10,7 +10,7 @@
 	width: 100%; 
 	height: 100%;
 	opacity: 0.7;
-	z-index: 9999;
+	z-index: 1;
 }
 .info-popup {
 	position: fixed;
